# LLM-LAMBDA

./: .gitignore  CHANGELOG.md  README.md  __init__.py  llm_lambda.py  prompt.json  pyproject.toml
llm_lambda.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: conftest.py
